Changelog for Writer2xhtml version 1.6.1 -> 1.7.1

All changes are classified as
- New feature: New functionality has been added to the extension
- Improved: A feature was changed to work better than in the previous version
- Bugfix: A bug in the previous version was fixed
- Changed: Something has changed due to a design decision

---------- version 1.7.1 ----------

- Changed: The HTML export dialogs offers two new configurations: "Original formatting with navigation panel" and "Clean HTML".

- Changed: The standard option cleanxhtml.xml has been reworked to not include options that are available in the export dialog. Also, the
  content has been reordered to match the order in the configuration.

- Improved: In exported names (e.g. CSS class names), non-ASCII letters were previously ignored. Now they are replaced by the
  corresponding base character making names more readable. Also the Danish letters ae and o with stroke are replaced by ASCII characters.

- New feature: New option filenames with to define the file naming scheme if file splitting is used.
  Possible values are values name-number (default, use base file name+number), name-section (use base file name+heading/sheet name)
  and section (use heading/sheet name)

- Improved: Page references now inserts the "real" page number, that is the file number in the sequence (only
  relevant if split_levels>0)

- Bugfix: Custom templates and style sheets now also work for spreadsheets

- Improved: Panels now include all indexes (previously only table of contents and alphabetical index)

- Improved: Panels now include footnote and endnote pages. Title is either automatic based on the document language
  or taken from the options footnotes_heading and endnotes_heading

- Bugfix: Now only includes header or footer if the corresponding id in template_ids is non-empty

- Bugfix: Now always uses the first global table of contents for the navigation bars
